# jui

./: .doc_sync_cache.json  CMakeLists.txt  b2.txt  build_log.txt  build_out.txt  build_output.txt  diag_out.txt  test_results.txt  tr.txt
.codebuddy/rules/: 自动化.mdc
.codebuddy/skills/cpp-code-review/: SKILL.md
.codebuddy/skills/cpp-memory-safety/: SKILL.md
.codebuddy/skills/cpp-performance-optimization/: SKILL.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  INSPECTOR_DESIGN.md  README.md  REFACTOR_PLAN.md  REFACTOR_V3.md  USER_MANUAL.md
examples/: CMakeLists.txt
examples/01_hello_window/: main.cpp
examples/02_hello_button/: main.cpp
examples/03_layout_demo/: main.cpp
examples/04_form_demo/: main.cpp
examples/05_controls_demo/: main.cpp
examples/06_tabs_demo/: main.cpp
examples/07_list_demo/: main.cpp
examples/08_grid_demo/: main.cpp
examples/09_binding_demo/: main.cpp
examples/10_full_app/: main.cpp
examples/hello/: main.cpp
include/jui/: jui.h
include/jui/bus/: event_bus.h  ievent_bus.h  jui_interfaces.h  service_locator.h
include/jui/core/: data_model.h  engine.h  geometry.h  idata_model.h  iwidget_tree.h  surface.h  value.h  widget.h  widget_types.h
include/jui/input/: iinput_dispatcher.h
include/jui/inspector/: inspector.h
include/jui/layout/: ilayout_engine.h  layout.h
include/jui/render/: button_state.h  checkbox_state.h  d2d_adapter.h  d2d_renderer.h  grid_state.h  irender_target.h  iwidget_renderer.h  iwidget_state.h  jui_states.h  list_state.h  picker_state.h  render_widget.h  slider_state.h  state_base.h  tabs_state.h  test_renderer.h  text_state.h  textfield_state.h  toggle_state.h  widget_state.h
include/jui/test/: debug_logger.h  driver.h  recorder.h  test.h  validator.h
skills/cpp-build-system/: SKILL.md
skills/cpp-code-simplification/: SKILL.md
skills/cpp-debugging/: SKILL.md
skills/cpp-idea-refine/: SKILL.md
skills/cpp-incremental-implementation/: SKILL.md
skills/cpp-planning-and-task-breakdown/: SKILL.md
skills/cpp-spec-driven-development/: SKILL.md
skills/cpp-test-driven-development/: SKILL.md
skills/using-agent-skills/: SKILL.md
src/core/: data_model.cpp  engine.cpp  surface.cpp  value.cpp  widget.cpp
src/inspector/: inspector.cpp
src/layout/: layout.cpp
src/render/: d2d_renderer.cpp  render_widget.cpp
src/test/: debug_logger.cpp  driver.cpp  recorder.cpp  validator.cpp
tests/: test_ai_integration.cpp  test_all_examples.cpp  test_all_examples_inspect.cpp  test_blackbox_03.cpp  test_d2d_renderer.cpp  test_data_model.cpp  test_debug_logger.cpp  test_doc_sync.py  test_engine.cpp  test_inspector.cpp  test_layout.cpp  test_list_grid.cpp  test_modular_architecture.cpp  test_modular_states.cpp  test_pluggable_renderer.cpp  test_render_widget.cpp  test_surface.cpp  test_text_visibility.cpp  test_value.cpp  test_visual_coverage.cpp  test_widget.cpp  test_widget_state.cpp
tools/: doc_sync.py  doc_sync_config.json
